code/human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_41.wast
(assert_malformed
  (module quote "(func loop end $l)")
  "mismatching label"
)